theme/style.css
body {
    background: url("assets/background.jpg");
    background-attachment: fixed;
    font-family: 'Segoe UI',Tahoma,Geneva,Verdana,sans-serif
}

@media (min-width: 900px) {
    aside {
        max-width: 15%;
        position: fixed;
        top: 0;
        left: 0;
        margin: 7% auto auto 7%;
    }

    aside #banner {
        padding: 30px 20px;
        background: #eee;
        box-shadow: 10px 10px 7px #000000c3;
    }

    aside img:first-of-type {
        width: 100%;
        max-width: 175px;
        border-radius: 50%;
        display: flex;
        margin: 0 auto
    }

    aside h2 {
        text-align: center;
        font-size: 1.85em;
        font-weight: bolder;
        line-height: 1;
    }

    aside p {
        text-align: center;
        padding: 0 15px;
        margin-top: -1em
    }

    aside #drawer {
        margin: 7% 7% 0;
    }

    aside #drawer > ul.links {
        margin: 0
    }

    aside #drawer > ul.links li {
        background: #eee;
        box-shadow: 10px 10px 7px #000000c3;
        padding: 7px;
        transition: all .2s ease-in-out;
        margin-bottom: 0.33em;
        font-size: 1.5em;
        text-align: center;
    }

    aside #drawer > ul.links li:hover {
        background: #fff;
        transition: all .2s ease-in-out
    }

    aside #drawer > ul.links li:hover > a {
        color: #000;
        transition: all .2s ease-in-out
    }

    aside #drawer > ul.links li a {
        color: #555;
        text-decoration: none
    }

    main {
        column-gap: 1.5em;
        margin: 1.5em auto;
        max-width: 80%;
        overflow: hidden;
        padding-left: 20%;
        column-count: 3;
    }

    footer {
        width: 70%;
    }
}

@media (max-width: 900px) {
    aside {
        margin-top: -10px;
        width: 100%;
        background: #eee;
        box-shadow: 10px 10px 7px #000000c3;
    }

    aside img:first-of-type {
        display: none;
    }
    
    aside h2 {
        text-align: center;
        padding: 7px;
    }
    
    aside #drawer {
        margin: -8px auto 16px;
    }

    aside #drawer > ul.links {
        margin-bottom: 0
    }

    aside #drawer > ul.links li {
        display: inline-block;
        width: 32%;
        text-align:center;
        padding-bottom: 5px;
    }

    aside #drawer > ul.links li a {
        text-decoration: none;
        color: #555;
    }

    footer {
        width: 90%;
    }
}

aside #drawer > ul.links {
    list-style-type: none;
    padding-left: 0
}

figure {
    background-color: #eee;
    display: inline-block;
    width: 100%;
    padding: 1em;
    margin: 0 0 1.5em;
    box-shadow: 10px 10px 7px #000000c3;
    transition: all .5s ease-in-out;
    color: initial
}

figure h2 a {
    color: #000;
    text-decoration: none;
}

figure img {
    max-width: 100%;
    transition: all .5s ease-in-out
}

figure:hover {
    width: 105%;
    margin-left: -2.5%;
    transition: all .5s ease-in-out
}

figure:hover img {
    opacity: .8;
    transition: all .5s ease-in-out
}

figcaption {
    padding-top: .5em;
    text-align: center
}

html {
    box-sizing: border-box
}

*,:before,:after {
    box-sizing: inherit
}

footer {
    margin: 0 auto 30px;
    background: #eee;
    box-shadow: 10px 10px 7px #000000c3;
}

footer a {
    text-decoration: none;
    color: #5e439e;
    display: inline-block;
    padding: 15px;
}

footer a:hover {
    color: black;
    background: #fff;
}

footer a[href*="twitter.com"] {
    background-image: url("assets/twitter.png");
    background-repeat: no-repeat;
    background-position: 1em 50%;
    padding-left: calc(20px + 1em);
}

